app/assets/stylesheets/application.sass
//= require_tree .
//= require_self
//= require normalize
//= require skeleton

$text: #636363
$primary: #32C1EE

.ai-toolbox
  .hero
    color: white
    background: image-url("dark_wall.png")
    padding-top: 10px
    .robot
      width: 100%
      float: right
    .title
      margin-top: 5px
      margin-bottom: 5px
      color: $primary
    .search
      margin-top: 25px
    .navigation
      h1
        padding: 10px 0
        a
          color: white
          text-decoration: none
      .menu
        padding: 10px 0
        margin-top: 24px
        font-size: 18px
        a
          color: white
          text-decoration: none
          margin-left: 10px

.repo
  color: lighten($text, 20)
  padding: 20px 0
  a
    color: $text
    text-decoration: none
  .name
    font-size: 3rem
    font-weight: bold
    margin-bottom: 0
  .timestamp
    margin-top: 15px
    font-style: italic
    text-transform: lowercase
    text-align: right
  p
    margin-bottom: 0
  table.stats
    th, td
      padding: 0 15px 0 0
      border: none
  .commit_activity
    b
      color: $text
    table
      table-layout: fixed
      td
        width: 10px
        height: 10px
        padding: 0
        background: $primary

.footer
  text-align: center
  font-size: 2rem
  padding: 100px 0 60px

